# notes

./: .gitignore  README.md  azure-pipelines.yml
.github/workflows/: blank.yml  blog-post-workflow.yml
advanced-cpp/: adv_cpp_1.md  lecture_2_followup.md
advanced-cpp/basics/: a.out  bar.cpp  const_dest_new.cpp  experiments.cpp  explicit_keyword.cpp  foo.cpp  foo.h  smart_pointers.cpp  smart_pointers.md  virtual_methods.cpp
advanced-cpp/lecture_10/: 1.md  2.md  3.md  a.out  test.cpp  test.out  y
advanced-cpp/lecture_11/: 1.md  2.md
advanced-cpp/lecture_3/: adv_cpp_2.md  clean_notes.md  l3.cpp  l3_1.cpp  l3_2.cpp
advanced-cpp/lecture_4/: move_semantics.md
advanced-cpp/lecture_5/: 1.md
advanced-cpp/lecture_6/: 1.md  2.md
advanced-cpp/lecture_7/: 1.cpp  1.md  2.cpp  3.cpp  a.out
advanced-cpp/lecture_8/: 1.md  2.md  3.md  4.md
advanced-cpp/lecture_9/: 1.md  2.md  3.md
advanced-cpp/scratch/: expression_template.cpp  reference_value.cpp  t4.cpp
cmake/hello-world/: CMakeLists.txt  hello
cmake/student/: CMakeLists.txt
cmake/studentlib_shared/: CMakeLists.txt
cmake/studentlib_shared/include/: Student.h
cmake/studentlib_shared/src/: Student.cpp
design-patterns/chain_of_responsibility.playground/: Contents.swift  timeline.xctimeline
gradle/: 1.md
gradle/sample-gradle/: build.gradle
kernel-notes/: k_notes_1.md  k_notes_2.md  k_notes_3.md  k_notes_4.md  k_notes_5.md
lxc-notes/: README.md  lxc1.md  lxc2.md  lxc3.md  lxc4.md  lxc5.md
scale/: architectures.md
swift/: 1.md  Hello.swift
virtualization/: type-1-hypervisor.md
(+18 files in other folders)
